--- a/assets/site-footer.scss
+++ b/assets/site-footer.scss
@@ -1,3 +1,4 @@
+$tablet: 768px;
 $desk: 1100px;
 
 .site-footer {
@@ -42,8 +43,12 @@ $desk: 1100px;
 .site-footer__social-links {
   margin-bottom: 10px;
 
-  li + li {
-    margin-left: 12px;
+  li {
+    margin-right: 12px;
+
+    &:last-child {
+      margin-right: 0;
+    }
   }
 }
 
@@ -57,5 +62,38 @@ $desk: 1100px;
 }
 
 .sub-footer {
+  border-top: 2px solid #635136;
   padding-bottom: 20px;
+  padding-top: 25px;
+}
+
+.site-footer__copyright-text {
+  color: #7C8F84;
+  line-height: 18px;
+  margin-bottom: 9px;
+}
+
+.badge-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+
+  @media (min-width: #{$tablet}) {
+    text-align: right;
+  }
+}
+
+.badge-list__item {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.badge-list__item + .badge-list__item {
+  @media (min-width: #{$tablet}) {
+    margin-left: 4px;
+  }
+
+  @media (min-width: #{$desk}) {
+    margin-left: 23px;
+  }
 }
