--- a/snippets/product-grid-item.liquid
+++ b/snippets/product-grid-item.liquid
@@ -38,6 +38,13 @@
         {%- assign brand_image_name = brand_handle_name | append: '-logo.jpg' -%}
         {%- assign brand_image_name_2x = brand_handle_name | append: '-logo-2x.jpg' -%}
         <img src="{{ brand_image_name | asset_url }}" alt="{{ product.vendor }}" srcset="{{ brand_image_name_2x | asset_url }} 2x" class="product__brand-image" loading="lazy" onerror="this.style.display='none'">
+      {%- elsif collection_handle == 'soil3' -%}
+        {%- assign brand_image_name = 'omri-badge.png' -%}
+        {%- assign brand_image_name_2x = 'omri-badge-2x.png' -%}
+        <picture>
+          <source media="(min-width: 768px)" srcset="{{brand_image_name | asset_img_url: '60x'}}, {{ brand_image_name_2x | asset_img_url: '60x', scale: 2 }} 2x">
+          <img src="{{ brand_image_name | asset_img_url: '40x' }}" alt="{{ product.vendor }}" srcset="{{ brand_image_name_2x | asset_img_url: '40x', scale: 2 }} 2x" class="product__brand-image" loading="lazy" onerror="this.style.display='none'">
+        </picture>
       {%- endif -%}
     </div>
     {%- comment -%}
