increase home collection grid item size

--- a/assets/collection-grid-item.scss.liquid
+++ b/assets/collection-grid-item.scss.liquid
@@ -47,7 +47,10 @@ $tablet: 750px;
 
   @media all and (min-width: #{$tablet}) {
     background-size: cover;
-    // padding: 62.5px;
+  }
+
+  @media all and (min-width: #{$desk}) {
+    padding: 80px;
   }
 
   img {
