--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -169,7 +169,9 @@
       cart_url: '{{ routes.cart_url }}',
       cart_add_url: '{{ routes.cart_add_url }}',
       cart_change_url: '{{ routes.cart_change_url }}',
-      cart_clear_url: '{{ routes.cart_clear_url }}'
+      cart_clear_url: '{{ routes.cart_clear_url }}',
+      validation_tool_url: '{{ settings.validation_tool_url }}',
+      validation_tool_shop: '{{ settings.validation_tool_shop }}'
     };
   </script>
   <!-- Shopify marketing and plugin stuff -->
