--- a/assets/forms.scss
+++ b/assets/forms.scss
@@ -1,4 +1,5 @@
 $border-color: #B7B7B7;
+$color_primary: #54A45B;
 $text-color: #333333;
 $white: #FFFFFF;
 
@@ -60,4 +61,20 @@ $white: #FFFFFF;
   padding: 16px;
   margin-bottom: 13px;
   margin-top: 8px;
+}
+
+.toggle-label {
+  background-color: $white;
+  display: inline-block;
+  padding: 5px 10px;
+  box-shadow: 0 0 1px $border-color;
+}
+
+.toggle-label ~ .toggle-label {
+  margin-left: -3px;
+}
+ 
+.toggle-input:checked + .toggle-label {
+  color: $white;
+  background-color: $color_primary;
 }
